--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Andrew Dudley"
   avatar           : "assets/images/me.jpeg"
-  bio              : "Computer scientist. Data scientist. Rock climber. (N)vim lover. Data hoarder."
+  bio              : "Computer scientist. Data scientist. Rock climber. (Neo)vim lover. Data hoarder."
   location         : "Tempe, AZ"
   email            :
   links:
