--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google" # false (default), "google", "google-universal", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          : "UA-138142770-1"
     anonymize_ip         : false# true, false (default)
