--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Techknowfile"
 title_separator          : "-"
 name                     : "Andrew Dudley"
 description              : "Computer scientist. Data scientist. Rock climber. (Neo)vim lover. Data hoarder."
-url                      : techknowfile.dev
+url                      : "https://techknowfile.dev"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
